jwt auth issue try